@@ -1,4 +1,11 @@
 2016-07-15  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
+  * gpasm/gpasm.h.in, gpasm/lst.c, libgputils/gpmemory.c,
+    libgputils/gpmemory.h:
+    New functions and a listing bugfix.
+	gp_mem_b_offset_is_used
+	gp_mem_i_offset_is_used
+
+2016-07-15  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
   * gpasm/Makefile.*, gpasm/cod.c, gpasm/file.c, gpasm/file.h,
     gpasm/gpasm.c, gpasm/gpasm.h.in, gpasm/lst.c, gpasm/macro.c,
     gpasm/parse.y, gpasm/scan.l, gpasm/util.c:
